--- a/style.css
+++ b/style.css
@@ -1,6 +1,53 @@
-li{
-    padding-left: 10px;
+header{
+    z-index: 2;
 }
-.liste{
-    margin-left: 60%;
+
+.bar{
+    display: flex;
+    flex-direction: row;
+    background-color: darkslategrey;fill-opacity: 0.5;
+    -webkit-box-shadow: 0px 17px 39px 0px rgba(0,0,0,0.54);
+-moz-box-shadow: 0px 17px 39px 0px rgba(0,0,0,0.54);
+box-shadow: 0px 17px 39px 0px rgba(0,0,0,0.54);
+
+
+    
+}
+
+.nav-list{
+    display: flex;
+    list-style-type: none;
+    display: inline-flex;
+    font-size:medium;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-right: 15px;
+    margin-top: 40px;
+}
+
+.titre{
+    font-size: xx-large;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    flex-grow: 3;
+    margin-left: 30px;
+
+}
+
+.item-navbar{
+    padding-left: 20px;
+}
+
+body{
+    margin: 0;
+}
+
+.img-acc{
+    display: flex;
+    justify-content: center;
+    margin-top: -70px;
+    z-index: 1;
+}
+
+.accueil-image{
+    z-index: 1;
+    width: 200%;
 }
